--- a/client/src/index.css
+++ b/client/src/index.css
@@ -168,3 +168,27 @@ header a {
   font-weight: bold;
   color: #c00;
 }
+
+.books-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  /* list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center; */
+}
+
+.books-list li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.books-list img {
+  width: 100%;
+  height: auto;
+}
